# fortune-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  coverage.yml
cookies/zh/: lunyu
src/: cookie.rs  fortune.rs  main.rs  metadata.rs  strfile.rs
src/cookie/: embed.rs  serializer.rs
tests/: identical_test.rs  integration.rs
tests/data/: apple  one  orange
tests/data/off/: offensive
tests/data2/: cat  dog
