[package]
name = "fortune-rs"
version = "0.1.0"
edition = "2021"
default-run = "fortune"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0.16"
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2.9"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
rand = "0.8"
regex = "1.10"

[[bin]]
name = "fortune"
path = "src/fortune.rs"

[[bin]]
name = "strfile"
path = "src/strfile.rs"
