[package]
name = "fortune-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tao Wang <twang2218@gmail.com>"]
description = "A Rust implementation of the classic BSD fortune program"
license = "MIT"
repository = "https://github.com/twang2218/fortune-rs"
homepage = "https://github.com/twang2218/fortune-rs"
documentation = "https://docs.rs/fortune-rs"
readme = "README.md"
keywords = ["fortune", "cookie", "game", "command-line", "cli"]
categories = ["command-line-utilities", "text-processing", "games"]
default-run = "fortune"
include = [
    "src/*",
    "tests/*",
    "Cargo.toml",
    "Cargo.lock",
    "Cross.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
log = "0.4"
oxilangtag = "0.1.5"
rand = "0.8"
regex = "1.10"
rust-embed = { version = "8.5.0", features = ["include-exclude", "include-flate", "debug-embed", "compression"] }
sys-locale = "0.3.2"

[dev-dependencies]
assert_cmd = "2.0.16"
ctor = "0.2.9"

[[bin]]
name = "fortune"
path = "src/fortune.rs"

[[bin]]
name = "strfile"
path = "src/strfile.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
strip = true
